# Voice-Light

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  main.py  server.py
app/asr/: alignment.py  client.py  modal_endpoint.py  normalization.py  repository.py  router.py  schemas.py  service.py  transcript.py
app/asr_quality/: alignment.py  metrics.py  normalization.py  schemas.py
app/audio/: __init__.py  loading.py  wav.py  waveform.py
app/compute/: __init__.py  auth.py  batch_asr.py  config.py  dataset_audio.py  main.py  quality.py  runtime.py  server.py  telemetry.py  voice.py
app/data/: sessions.py
app/dataset_dashboard/: router.py
app/db/: migrate.py  models.py  repository.py
app/ingestion/: discovery.py  service.py
app/local/: __init__.py  compute_voice.py  config.py  main.py  server.py
app/quality/: audio.py  audio_quality.py  client.py  events.py  modal_endpoint.py  models.py  preprocessing.py  remote_models.py  scoring.py  service.py  transport.py  utils.py  vad.py
app/shared/: __init__.py  asr.py  base_model.py  compute_api.py  language.py  quality.py
app/storage/: base.py  local.py
app/tests/: test_audio_analysis.py  test_pipecat_smart_turn_v3.py
app/training/: __init__.py
app/voice_agent/: __init__.py  asr_worker_protocol.py  interfaces.py  modal_endpoint.py  nemotron_client.py  nemotron_worker.py  runtime.py  schemas.py  session.py
app/web/: index.html
deployment/compute/: benchmark_canary_batching.py  benchmark_llm.py  benchmark_parakeet_batching.py  benchmark_qwen_workers.py  benchmark_tts.py  benchmark_voice_session.py  benchmark_voxtream.py  bootstrap.sh  configure_environment.py  deploy-vast.ps1  install-service.sh  install_asr_torch_cu126.sh  install_vllm.sh  install_voxtream.sh  merge_qwen_lora.py  provision-vast.sh  qwen_load_process.py  smoke_test_tool_use.py  start.sh  status.sh  stop.sh  validate_environment.py
docs/: asr-analysis.md  compute-backend.md  full-recording-asr.md  latency-and-eot-baselines.md  model-benchmark-results.md  natural-interaction-design-study.md  natural-interaction-research-brief.md  natural-tool-use-finetuning-plan.md  research-matrix.md  streaming-voice-agent-prototype.md  synchronization-offset-evaluation.md  teacher-led-tool-use-generation.md  tool-use-finetuning-results.md  tool-use-lora-training.md  tool-use-synthetic-generation.md  turn-taking-training.md  vast-deployment.md  voice-agent-plan.md
docs/future-work/: speaker-separation-for-conversational-data.md  speculative-speech-tool-pipelining.md
synthetic-generation/: CASE_DESIGN_GUIDE.md  README.md  interaction_cases_elevenlabs_smoke.json  interaction_cases_elevenlabs_v3_backchannels_v4.json  interaction_cases_elevenlabs_v3_context_v5.json  interaction_cases_elevenlabs_v3_context_v6.json  interaction_cases_elevenlabs_v3_interruption_only_v6.json  interaction_cases_elevenlabs_v3_tagged_v3.json  interaction_cases_interruptions.json  interaction_cases_minimal_schema_example.json  interaction_cases_mixed_v2.json  pyproject.toml  two_track_conversation_aligner.html
synthetic-generation/src/: __init__.py  asr_placement.py  audio_utils.py  export_mixes.py  generate_samples.py  interaction_cases.py  launch_aligner.py  models.py  package_experiment.py  update_backchannel_onsets.py
synthetic-generation/src/backends/: __init__.py  base.py  elevenlabs.py  fake.py  qwen_voice_design.py  registry.py
synthetic-generation/tests/: test_audio_utils.py  test_generation_pipeline.py
synthetic-generation/web/: aligner.html
tests/: test_config.py  test_dependency_boundaries.py  test_package_boundaries.py
tests/asr/: test_cached_service.py  test_canary.py  test_compute_endpoint.py  test_full_recording_api.py  test_full_recording_pair.py  test_full_recording_service.py  test_inference_execution.py  test_modal_endpoint.py  test_model_base.py  test_parakeet.py  test_parsing.py  test_upload_client.py
tests/asr_quality/: test_metrics.py  test_runner_parsers.py
tests/browser/: dataset-assessment.test.mjs  playback-worklet.test.mjs  (+1 more)
(+481 files in other folders)
