[project]
name = "voice-light"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "huggingface-hub>=1.23.0",
    "livekit-local-inference>=0.2.6",
    "modal>=1.0.0",
    "numpy>=2.0.0; python_version < '3.14'",
    "numpy>=2.5.1; python_version >= '3.14'",
    "onnxruntime>=1.24.3",
    "psycopg[binary]>=3.2.0",
    "safetensors>=0.8.0",
    "silero-vad>=6.2.1",
    "torch>=2.13.0",
    "transformers>=5.13.0",
    "uvicorn>=0.30.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]

[tool.pytest.ini_options]
pythonpath = ["."]
