[project]
name = "voice-light"
version = "0.1.0"
requires-python = ">=3.12,<3.13"
dependencies = [
    "av>=17.1.0",
    "fastapi>=0.115.0",
    "huggingface-hub>=1.23.0",
    "httpx>=0.28.0",
    "livekit-local-inference>=0.2.6",
    "numba>=0.61.0",
    "numpy>=2.0.0",
    "onnxruntime>=1.24.3",
    "psycopg[binary]>=3.2.0",
    "python-multipart>=0.0.9",
    "safetensors>=0.8.0",
    "silero-vad>=6.2.1",
    "torch>=2.13.0",
    "transformers>=5.13.0",
    "uvicorn>=0.30.0",
    "websockets>=15.0.0",
]

[project.optional-dependencies]
compute = [
    "faster-whisper>=1.1.0",
    "librosa>=0.11.0",
    "moshi==0.2.13",
    "nemo-toolkit[asr] @ git+https://github.com/NVIDIA/NeMo.git@8e683a05216762f89390b08702b5dc4eaf3e1676",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ANN"]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = ["integration: requires explicitly configured external model infrastructure"]

[tool.uv]
environments = ["sys_platform == 'linux' and platform_machine == 'x86_64'"]
override-dependencies = [
    "huggingface-hub>=1.23.0",
    "safetensors>=0.8.0",
    "torch>=2.13.0",
]
